--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -17,10 +17,21 @@ header
             flex-direction: column
             background-color: #000000
             border-radius: 20px
+            position: relative
+            img
+                transition: all .5s ease
+                position: absolute
+                top: 10px
+            .lang__en
+                opacity: 0
+            .lang__ua
+                opacity: 0
             select
                 background: none
                 color: #FFF
                 border: none
+                margin-top: 25px
+                font-size: 20px
         .menu__list
             display: flex
             justify-content: space-between
