--- a/src/sass/_projects.sass
+++ b/src/sass/_projects.sass
@@ -33,7 +33,6 @@
     &__filter-wrapper
         display: grid
         grid-template-columns: repeat(2, 370px)
-        grid-auto-rows: repeat(2, 540px)
         column-gap: 75px
         row-gap: 30px
         justify-content: center
@@ -51,7 +50,7 @@
                 text-align: center
                 border-bottom-left-radius: 20px
                 border-bottom-right-radius: 20px 
-                width: 370px
+                max-width: 370px
                 margin: 0 auto
             &:hover .projects__card-content
                 transform: translateY(0%)
