--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,9 @@
 html
     scroll-behavior: smooth
 
+.lang
+    font-family: "Comfortaa", sans-serif
+
 body
     background: linear-gradient(#737373, #000000)
 
@@ -26,3 +29,6 @@ body
 @import 'message'
 @import 'contacts'
 @import 'theme'
+@import 'hamburger'
+@import 'menu'
+@import 'media'
