--- a/src/sass/_promo.sass
+++ b/src/sass/_promo.sass
@@ -9,6 +9,7 @@
         align-items: center
         grid-template-columns: 300px 650px
         column-gap: 120px
+        position: relative
     &__text
         background-color: #070707a7
         width: 100%
@@ -25,7 +26,7 @@
             font-size: 34px
             font-family: "Italianno", cursive
             bottom: -7px
-            width: 350px
+            max-width: 350px
             color: #FFF
             font-weight: lighter
-            right: 5px
+            right:  10px
