--- a/src/sass/_menu.sass
+++ b/src/sass/_menu.sass
@@ -71,8 +71,8 @@
                 position: absolute
                 top: 10px
                 width: 40px
-            // .lang__en
-            //     opacity: 0
+            .lang__en
+                opacity: 0
             .lang__ua
                 opacity: 0
             select
@@ -81,7 +81,7 @@
                 border: none
                 margin-top: 35px
                 font-size: 30px
-    .menu__theme-side
+    .menu__theme
             display: flex
             justify-content: center
             align-items: center
