--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -42,3 +42,12 @@
         &_first
             margin-left: -40px
             margin-top: 10px
+    &-active 
+        .modal__dialog
+            background-color: #000000
+        .modal__close
+            svg
+                path
+                    fill: #fff
+        .modal-text
+            color: #FFF
