--- a/src/sass/_hamburger.sass
+++ b/src/sass/_hamburger.sass
@@ -13,7 +13,7 @@
         span
             display: block
     span
-        background-color: #000000
+        background-color: #FFF
         width: 40px
         height: 4px
         display: none
