--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -216,3 +216,10 @@
         &__social
             .icons__social
                 margin-right: 10px
+    .news
+        &__card-text
+            font-size: 16px
+        &__card
+            margin-right: 6px
+        &__card-btn
+            font-size: 18px
