--- a/src/sass/_theme.sass
+++ b/src/sass/_theme.sass
@@ -38,3 +38,6 @@
             .icons__social  
                 svg
                     fill: #000000
+    .news
+        &__title
+            color: #000000
