--- a/src/sass/_message.sass
+++ b/src/sass/_message.sass
@@ -27,17 +27,17 @@
             justify-content: center
             flex-direction: column
             align-items: center
-            .privacy
-                margin-top: 10px
-                font-size: 25px
-                color: #fff
-                input
-                    margin-right: 10px
-                    width: 15px
-                    height: 15px
-                    cursor: pointer
-                a
-                    text-decoration: none
+            // .privacy
+            //     margin-top: 10px
+            //     font-size: 25px
+            //     color: #fff
+            //     input
+            //         margin-right: 10px
+            //         width: 15px
+            //         height: 15px
+            //         cursor: pointer
+            //     a
+            //         text-decoration: none
         button
             margin-top: 18px  
             background-color: #FFF 
